# website

./: .gitignore  2k_earth_clouds.avif  2k_earth_daymap.avif  2k_earth_nightmap.avif  8k_earth_daymap.avif  8k_earth_nightmap.avif  8k_earth_normal_map.avif  8k_earth_specular_map.avif  CNAME  README.md  authors.json  gen.py  index.html  manifest.json  meta.json  mysteries.json  new.avif  priests.html  skeleton.html  tags.json
.github/workflows/: deploy.yml  scrape.yml
articles/missa/: 2ndSundayAfterEaster1954.html
audiogen/: generate.py  ogg.py  transcribe.py
config/: manifest.json  meta.json  mysteries.json
docs/: en.md
img2avif/: Cargo.toml
img2avif/src/: main.rs
md2json/: Cargo.toml  build.sh  md2json-linux  md2json-mac
md2json/.cargo/: config.toml
md2json/src/: main.rs
md2json2/: Cargo.toml  md2json-linux
md2json2/src/: docs.rs  hnsw.rs  langtrain.rs  main.rs  pdf.rs  resistance.rs  review.rs  rosary.rs  wip.rs
missa/: 4thSundayAfterEaster.html
scripts/: audio.py  generate.py  ogg.py  translate.py
scripts/massdownload/: analyze.py  analyze2.py  download.py  otherurls.txt  script.sh  urls.txt
scripts/videogen/: README.md  preprocessing.py  translate_dub.py
static/css/: DATA_LINK_ICON.css  DROPCAP.css  FIGURE.css  FLOATING_HEADER.css  FOOTER.css  FOOTNOTE.css  IMAGE_OVERLAY.css  MARGINNOTE.css  NAVIGATION.css  PAGE_TOOLBAR.CSS  PRINT.css  SIDENOTE.css  TOC.css  critical.css  head.css  head2.css  initialen.css  inlined-styles.css  mathjax.css  noscript.css  style.css
static/img/: 2k_earth_normal_map.avif  2k_earth_specular_map.avif  8k_earth_clouds.avif  8k_earth_nightmap.avif  death.avif  watercolor.avif
static/js/: Hyphenopoly.js  geo.tz.js  geotz.js  head.js  head2.js  ligature.js  missing.js  pagefind_search.js  script.js  search-de.js  search-en.js  search.js
templates/: abstract.html  article.critical.css  backlinks.html  bibliography.html  body-footer.html  body-noscript.html  card.html  card2.html  content.html  darklight.html  death.html  donate.html  figure.float.html  figure.html  first-paragraph.html  footer.html  footnote.html  footnotes.html  head.html  header-navigation.html  index-body.html  index-template.html  index.first-section.html  index.section.html  inlined-styles-color-dark.css  inlined-styles.css  latin.css  latin.grammar.js  latin.lesson.html  license.html  lorem.html  missa.html  multilang.tags.html  navigation-help-de.html  navigation-help-en.html  navigation-help.html  noscript-footer.html  page-description-de.html  page-description-en.html  page-description.html  (+37 more)
templates/latin/: latin.vocab.1.csv
tiledownload/: Cargo.toml
tiledownload/src/: main.rs
(+8638 files in other folders)
