[package]
name = "md2json"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
comrak = { version = "0.31.0", default-features = false }
get_dir = "0.3.0"
image = { version = "0.25.5", default-features = false, features = ["rayon", "avif", "bmp", "jpeg", "png", "webp"]}
serde = { version = "1.0.215", default-features = false }
serde_derive = { version = "1.0.215", default-features = false }
serde_json = { version = "1.0.133", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
walkdir = "2.5.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

