[package]
name = "md2json2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
minify-html = "*"
css-minify = "*"
minifier = "*"
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", optional = true }
strsim = { version = "0.11.1", optional = true }
walkdir = { version = "*", optional = true }
regex = "1.11.1"
minify-js = "0.6.0"
better-minify-js = "0.7.0"
html5minify = "0.3.3"
short-uuid = "0.1.4"

[features]
default = ["external"]
external = ["sha2", "strsim", "walkdir"]
