[package]
name = "md2json2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
minify-html = "*"
css-minify = "*"
minifier = "*"
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", optional = true }
strsim = { version = "0.11.1", optional = true }
walkdir = "2.5.0"
regex = "1.11.1"
minify-js = "0.6.0"
better-minify-js = "0.7.0"
html5minify = "0.3.3"
short-uuid = "0.1.4"
uuid = "1.11.1"
sha1 = "0.10.6"
csv = "1.3.1"
comrak = "0.39.0"
image = { version = "0.25.5", default-features = false, features = ["rayon", "avif", "bmp", "jpeg", "png", "webp"]}
unicode-normalization = "0.1"
printpdf = "0.8.2"

[features]
default = ["external"]
external = ["sha2", "strsim"]
